--- a/index.html
+++ b/index.html
@@ -786,18 +786,18 @@
                     <div class="metric-label">Average Fleet Delay</div>
                 </div>
 
-                <div class="metric-card">
-                    <div class="metric-header">
-                        <div class="metric-icon-wrapper success">
-                            <svg class="metric-icon success" viewBox="0 0 24 24" fill="none" stroke-width="2">
-                                <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"/>
-                            </svg>
-                        </div>
-                        <span class="metric-badge badge-success">Active</span>
-                    </div>
-                    <div class="metric-value">6</div>
-                    <div class="metric-label">Protected Flights</div>
-                </div>
+                <div class="metric-card" id="activeFlightsCard">
+    <div class="metric-header">
+    <div class="metric-icon-wrapper success">
+      <svg class="metric-icon success" viewBox="0 0 24 24" fill="none" stroke-width="2">
+        <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z" />
+      </svg>
+    </div>
+    <span class="metric-badge badge-success">Live</span>
+  </div>
+  <div class="metric-value" id="activeFlightsValue">6</div>
+  <div class="metric-label">Flights currently airborne</div>
+</div>
             </div>
 
             <!-- Charts -->
